--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 
       gtag('config', 'G-BZP6LCQ04W');
     </script>
+
+    <!-- Google tag (gtag.js) for G-MEEK7V1V18 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MEEK7V1V18"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MEEK7V1V18');
+    </script>
   </head>
 
   <body>
