--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <meta property="og:title" content="vibe-flow-coder" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/images/banner.png" />
+    <meta property="og:url" content="https://vibe-code-mvp-git-main-beni-adityas-projects.vercel.app" />
+    <meta property="og:image" content="https://vibe-code-mvp-git-main-beni-adityas-projects.vercel.app/images/banner.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="vibe-flow-coder banner" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/images/banner.png" />
+    <meta name="twitter:title" content="vibe-flow-coder" />
+    <meta name="twitter:description" content="Lovable Generated Project" />
+    <meta name="twitter:image" content="https://vibe-code-mvp-git-main-beni-adityas-projects.vercel.app/images/banner.png" />
+    <meta name="twitter:image:alt" content="vibe-flow-coder banner" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZP6LCQ04W"></script>
     <script>
